[gd_scene load_steps=8 format=3 uid="uid://dwny0dtj6y858"]

[ext_resource type="Script" path="res://src/main.gd" id="1_3824y"]
[ext_resource type="Texture2D" uid="uid://plth0obt11t6" path="res://assets/GUI/bg.png" id="1_xxsp0"]
[ext_resource type="Texture2D" uid="uid://ca87gli1isjah" path="res://assets/GUI/Button_Blue.png" id="2_4kpmp"]
[ext_resource type="Texture2D" uid="uid://b6osg080o2jt5" path="res://assets/GUI/Button_Blue_Pressed.png" id="3_4mvi1"]
[ext_resource type="FontFile" uid="uid://din16tm1x8u2p" path="res://assets/Fonts/Retro Gaming.ttf" id="4_oc0k8"]

[sub_resource type="LabelSettings" id="LabelSettings_q6d1i"]
font = ExtResource("4_oc0k8")
font_size = 20
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_dxkyc"]
font = ExtResource("4_oc0k8")
font_size = 75
font_color = Color(0, 0, 0, 1)
outline_size = 20

[node name="Main" type="Node"]
script = ExtResource("1_3824y")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_left = -576.0
offset_top = -224.0
offset_right = 1662.0
offset_bottom = 1023.0
texture = ExtResource("1_xxsp0")

[node name="StartButton" type="TextureButton" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 164.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("2_4kpmp")
texture_pressed = ExtResource("3_4mvi1")
texture_hover = ExtResource("3_4mvi1")
texture_disabled = ExtResource("3_4mvi1")

[node name="Play" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 186.0
offset_right = 10.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Play !"
label_settings = SubResource("LabelSettings_q6d1i")

[node name="Label2" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 176.0
offset_top = 80.0
offset_right = 966.0
offset_bottom = 176.0
text = "Tower protector"
label_settings = SubResource("LabelSettings_dxkyc")

[connection signal="button_down" from="Menu/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="mouse_entered" from="Menu/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/StartButton" to="." method="_on_start_button_mouse_exited"]
